kubernetes/tools/drone/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: drone
  name: drone
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
        - name: drone
          image: drone/drone:1.0.0-rc.3
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
