kubernetes/tools/drone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    app: drone
  ports:
    - name: http
      port: 80
      targetPort: http
