kubernetes/tools/drone/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone
  namespace: tools
spec:
  rules:
    - host: drone.expected.sh
      http:
        paths:
          - path: /
            backend:
              serviceName: drone
              servicePort: 80
